--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -17,17 +17,19 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
-    "html-pdf-node": "^1.0.8",
+    "html-pdf-node": "^1.0.7",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
-    "nodeman": "^1.1.2",
     "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "stripe": "^18.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
